--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -6,6 +6,13 @@
     "configurations": [
         {
             "type": "java",
+            "name": "eje13",
+            "request": "launch",
+            "mainClass": "Bol_2_Condicionales_y_bucles.eje13",
+            "projectName": "JavaExercises_efec44"
+        },
+        {
+            "type": "java",
             "name": "Menu",
             "request": "launch",
             "mainClass": "Bol_2_Condicionales_y_bucles.Menu",
